# isic4kit

./: .gitignore  .releaserc.json  2025-02-20-12-50-29-3931.cast  README.md  example.py  pyproject.toml
.github/: release.yml
isic4kit/: isic4.py  models.py
tests/: test_core.py  test_isic4.py  test_models.py
