[tool.poetry]
name = "isic4kit"
version = "0.1.0"
description = "Python SDK for ISIC Rev.4 classification data in Arabic and English"
authors = ["Abdullah Alqahtani <anqorithm@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"